<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/profile" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/literacy_tree_school"
                    android:textColor="@color/titleColorBd"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size01" />


                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_nov_2020"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size01" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size01" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_12_00"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/text_size01" />


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/deleteNoticeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/text_margin"
            android:text="@string/notice_list"
            android:textColor="@color/titleColor"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/deleteNoticeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY" />


        <ImageView
            android:id="@+id/ebookDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="-30dp"
            android:contentDescription="@string/download"
            android:src="@drawable/ic_downward" />


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>