<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/collage_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/image_description_collage"
            android:scaleType="fitXY" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:background="@drawable/headerfooter_bg"
            android:text="@string/history_of_the_school"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/about_collage1"
            android:textColor="@color/textHistory"
            android:textSize="@dimen/text_size" />

        <!-- Optimized TextView with Drawable -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:drawablePadding="8dp"
            android:text="@string/green_environment"
            android:textColor="@color/textHistory"
            app:drawableStartCompat="@drawable/ic_label" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/text_margin"
            android:clipToPadding="false"
            android:contentDescription="@string/image_slider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:background="@color/titleColorBd"
                android:padding="10dp"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/awesome"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/contact_info_admission"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_gravity="center"
                android:text="@string/literacy_tree_school"
                android:textColor="@color/textHistory"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:background="@color/titleColorBd"
                android:padding="10dp"
                android:text="@string/map"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:contentDescription="@string/map"
                android:src="@drawable/map" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
